--- a/roles/grafana-dashboards/tasks/main.yaml
+++ b/roles/grafana-dashboards/tasks/main.yaml
@@ -22,56 +22,7 @@
   ansible.builtin.fail:
     msg: "Missing Grafana instance. Please execute 'ansible-playbook install.yaml -t grafana' before trying to install the default datasource."
 
-# Keycloak dashboard source (revision 2):
-# https://grafana.com/grafana/dashboards/14390-keycloak-x-microprofile-metrics/
-- name: Create Keycloak dashboard
+- name: Create Grafana dashboards
   kubernetes.core.k8s:
-    template: keycloak-dashboard.yaml.j2
-
-# Nexus dashboard source (revision 1):
-# https://grafana.com/grafana/dashboards/16459-infra-nexus
-- name: Create Nexus dashboard
-  kubernetes.core.k8s:
-    template: nexus-dashboard.yaml.j2
-
-# Argo CD dashboard source (revision 1):
-# https://grafana.com/grafana/dashboards/14584-argocd
-- name: Create Argo CD dashboard
-  kubernetes.core.k8s:
-    template: argo-cd-dashboard.yaml.j2
-
-# Harbor dashboard source (revision 2):
-# https://github.com/goharbor/harbor/blob/main/contrib/grafana-dashboard/metrics-example.json
-- name: Create Harbor dashboard
-  kubernetes.core.k8s:
-    template: harbor-dashboard.yaml.j2
-
-# Hashicorp Vault dashboard source (revision 2):
-# https://grafana.com/grafana/dashboards/12904-hashicorp-vault
-- name: Create Vault dashboard
-  kubernetes.core.k8s:
-    template: vault-dashboard.yaml.j2
-
-# GitLab Runner dashboard source (revision 2):
-# https://grafana.com/grafana/dashboards/14016-gitlab-runner-metrics
-- name: Create GitLab Runner dashboard
-  kubernetes.core.k8s:
-    template: gitlab-runner-dashboard.yaml.j2
-
-# SonarQube dashboard source (revision 1):
-# https://grafana.com/grafana/dashboards/14152-sonarqube
-- name: Create SonarQube dashboard
-  kubernetes.core.k8s:
-    template: sonarqube-dashboard.yaml.j2
-
-# GitLab CI Pipelines dashboard source (revision 4):
-# https://grafana.com/grafana/dashboards/10620-gitlab-ci-pipelines
-- name: Create GitLab CI Pipelines dashboard
-  kubernetes.core.k8s:
-    template: gitlab-ci-pipelines-dashboard.yaml.j2
-
-# GitLab Gitaly dashboard source (revision 1):
-# https://grafana.com/grafana/dashboards/9123-gitaly
-- name: Create GitLab Gitaly dashboard
-  kubernetes.core.k8s:
-    template: gitlab-gitaly-dashboard.yaml.j2
+    template: "{{ item.dashboard_template }}"
+  loop: "{{ grafana_dashboards }}"
