--- a/roles/socle-config/files/releases.yaml
+++ b/roles/socle-config/files/releases.yaml
@@ -36,9 +36,12 @@ spec:
   keycloak:
     # https://artifacthub.io/packages/helm/bitnami/keycloak
     chartVersion: 16.1.5
-  kubed:
-    # https://artifacthub.io/packages/helm/appscode/kubed
-    chartVersion: 0.13.2
+#  kubed:
+#    # https://artifacthub.io/packages/helm/appscode/kubed
+#    chartVersion: 0.13.2
+  kyverno:
+    # https://github.com/kyverno/kyverno/tree/main/charts/kyverno
+    chartVersion: 3.1.4
   nexus:
     # https://hub.docker.com/r/sonatype/nexus3/
     imageTag: 3.56.0
