--- a/uninstall.yaml
+++ b/uninstall.yaml
@@ -177,22 +177,11 @@
         - never
         - kyverno
 
-    - name: "Suppression de l'instance Kyverno"
-      kubernetes.core.helm:
-        name: kyverno
-        chart_ref: kyverno/kyverno
-        release_namespace: dso-kyverno
-        state: absent
-        wait: true
-      tags:
-        - never
-        - kyverno
-
     - name: "Suppression du namespace Kyverno"
       kubernetes.core.k8s:
         state: absent
         kind: Namespace
-        name: dso-kyverno
+        name: "{{ dsc.kyverno.namespace }}"
       tags:
         - never
         - kyverno
