fix: :bug: Fix HA enablement + OIDC + get credentials

--- a/roles/vault/tasks/check.yml
+++ b/roles/vault/tasks/check.yml
@@ -14,7 +14,7 @@
       | from_json
       | dict2items
       | selectattr('key', 'eq', 'initialized')
-      | map(attribute='value') | first }}"
+      | map(attribute='value') | first | default('false') }}"
 
 - name: Set vault_sealed fact
   ansible.builtin.set_fact:
@@ -22,7 +22,7 @@
       | from_json
       | dict2items
       | selectattr('key', 'eq', 'sealed')
-      | map(attribute='value') | first }}"
+      | map(attribute='value') | first | default('true') }}"
 
 - name: Set vault_status to "not init"
   when: not vault_initialized
