feat: :sparkles: add dsc.global.offline

--- a/install.yaml
+++ b/install.yaml
@@ -8,6 +8,11 @@
       tags:
         - always
 
+    - name: cluster-offline
+      tags:
+        - always
+      when: dsc.global.offline
+
     - name: ca
       tags:
         - always
