--- a/roles/socle-config/files/crd-conf-dso.yaml
+++ b/roles/socle-config/files/crd-conf-dso.yaml
@@ -139,6 +139,9 @@ spec:
                       type: object
                       default: {}
                       x-kubernetes-preserve-unknown-fields: true
+                    privateGitlabDomain:
+                      description: Private Gitlab repository for argocd to access.
+                      type: string
                   required:
                     - admin
                   type: object
@@ -179,6 +182,10 @@ spec:
                       type: object
                       default: {}
                       x-kubernetes-preserve-unknown-fields: true
+                    consoleRepoUrl:
+                      description: Console repository url.
+                      default: https://github.com/cloud-pi-native/console.git 
+                      type: string
                   required:
                     - dbPassword
                   type: object
@@ -246,6 +253,22 @@ spec:
                       description: The namespace for GitLab Operator.
                       type: string
                   type: object
+                gitlabCatalog:
+                  description: Configuration for GitLab Catalog.
+                  properties:
+                    catalogRepoUrl:
+                      description: GitLab Catalog repository url.
+                      default: https://github.com/cloud-pi-native/gitlab-ci-catalog.git
+                      type: string
+                    catalogBranchesApi:
+                      description: GitLab Catalog branches api.
+                      default: https://api.github.com/repos/cloud-pi-native/gitlab-ci-catalog/branches
+                      type: string
+                    catalogTagsApi:
+                      description: GitLab Catalog tags api.
+                      default: https://api.github.com/repos/cloud-pi-native/gitlab-ci-catalog/tags
+                      type: string
+                  type: object
                 gitlabRunner:
                   description: Configuration for GitLab Runner.
                   properties:
@@ -301,6 +324,19 @@ spec:
                             - velero
                           type: string
                       type: object
+                    platform:
+                      default: openshift
+                      description: Cluster platform only openshift and kubernetes are
+                        supported.
+                      enum:
+                        - openshift
+                        - kubernetes
+                      type: string
+                    offline:
+                      default: false
+                      description: Specifies whether the cluster have access to the 
+                        internet or not.
+                      type: boolean
                     registry:
                       description: Specifies the internal registry to use.
                       type: string
@@ -309,6 +345,8 @@ spec:
                     - rootDomain
                     - environment
                     - metrics
+                    - platform
+                    - offline
                   type: object
                 grafana:
                   description: Configuration for Grafana instance.
@@ -582,6 +620,12 @@ spec:
                       type: string
                     postgresPvcSize:
                       description: Size for postgres' pvc
+                      type: string
+                    pluginDownloadUrl:
+                      description: Plugins download Url.
+                      type: string
+                    PrometheusJavaagentVersion:
+                      description: Prometheus javaagent version.
                       type: string
                     values:
                       description: |
