feat: remove equivalence between private_image_repository and cluster_offline

--- a/install.yaml
+++ b/install.yaml
@@ -4,6 +4,11 @@
   gather_facts: false
 
   roles:
+    - name: cluster-offline
+      tags:
+        - always
+      when: cluster_offline is defined
+
     - name: socle-config
       tags:
         - always
