--- a/roles/gitlab-catalog/tasks/main.yaml
+++ b/roles/gitlab-catalog/tasks/main.yaml
@@ -17,7 +17,7 @@
     api_url: https://{{ gitlab_domain }}
     api_token: "{{ gitlab_token }}"
     validate_certs: "{{ dsc.exposedCA.type == 'none' }}"
-    import_url: https://github.com/cloud-pi-native/gitlab-ci-catalog.git
+    import_url: "{{ dsc.gitlabCatalog.catalogRepoUrl }}"
     name: Catalog
     path: catalog
     group: "{{ dsc.global.projectsRootDir | join('/') }}"
@@ -43,31 +43,38 @@
 
 - name: Get source catalog branches
   ansible.builtin.uri:
-    url: https://api.github.com/repos/cloud-pi-native/gitlab-ci-catalog/branches
+    url: "{{ dsc.gitlabCatalog.catalogBranchesApi }}" 
   register: source_branches
 
 - name: Get source catalog tags
   ansible.builtin.uri:
-    url: https://api.github.com/repos/cloud-pi-native/gitlab-ci-catalog/tags
+    url: "{{ dsc.gitlabCatalog.catalogTagsApi }}" 
   register: source_tags
 
 - name: Set refs to update
+  when: cluster_offline is not defined
   ansible.builtin.set_fact:
     branches: "{{ source_branches.json | diff_branches(destination_branches.json) }}"
     tags: "{{ source_tags.json | diff_tags(destination_tags.json) }}"
+
+- name: Set refs to update
+  when: cluster_offline is defined 
+  ansible.builtin.set_fact:
+    branches: "{{ source_branches.json | diff_offline_branches(destination_branches.json) }}"
+    tags: "{{ source_tags.json | diff_offline_tags(destination_tags.json) }}"
 
 - name: Update refs
   block:
     - name: Ensure no repo exist locally
       ansible.builtin.file:
-        path: test
+        path: /tmp/test
         state: absent
 
     - name: Synchronize branches
       when: branches.to_push or branches.to_delete or tags.to_push or tags.to_delete
       ansible.builtin.shell: |
         set -e
-        git -c http.sslVerify=false clone https://github.com/cloud-pi-native/gitlab-ci-catalog.git test && cd test || exit 1
+        git -c http.sslVerify=false clone "{{ dsc.gitlabCatalog.catalogRepoUrl }}" test && cd test || exit 1
         git remote add dest https://root:{{ gitlab_token }}@{{ gitlab_domain }}/{{ dsc.global.projectsRootDir | join('/') }}/catalog.git
         for branch in {{ branches.to_delete }}; do
           echo "delete branch $branch"
@@ -87,9 +94,11 @@
           git -c http.sslVerify=false push dest $tag -f
         done
       changed_when: false
+      args:
+        chdir: /tmp
 
   always:
     - name: Cleanup repo locally
       ansible.builtin.file:
-        path: test
+        path: /tmp/test
         state: absent
