--- a/roles/gitlab-operator/tasks/main.yaml
+++ b/roles/gitlab-operator/tasks/main.yaml
@@ -66,6 +66,24 @@
         chart_version: "{{ dsc.gitlabOperator.chartVersion }}"
         release_namespace: "{{ dsc.gitlabOperator.namespace }}"
         values: "{{ operator_values }}"
+      when: dsc.general.registry == ""
+
+    - name: Generate post_renderer script
+      template:
+        src: post_renderer_template.j2
+        dest: /tmp/yq_script.sh
+        mode: 0755
+      when: dsc.general.registry != ""
+
+    - name: Deploy GitLab Operator helm
+      kubernetes.core.helm:
+        name: gitlab-operator
+        chart_ref: gitlab-operator/gitlab-operator
+        chart_version: "{{ dsc.gitlabOperator.chartVersion }}"
+        release_namespace: "{{ dsc.gitlabOperator.namespace }}"
+        values: "{{ operator_values }}"
+        post_renderer: /tmp/yq_script.sh 
+      when: dsc.general.registry != ""
 
     - name: Wait gitlab-webhook-service endpoint
       kubernetes.core.k8s_info:
