remove empty default for dsc.general.registry

--- a/roles/socle-config/files/crd-conf-dso.yaml
+++ b/roles/socle-config/files/crd-conf-dso.yaml
@@ -25,9 +25,7 @@ spec:
                   description: Generals options based on the cluster.
                   properties:
                     registry:
-                      default: ""
-                      description: Specifies the internal registry to use. Empty by
-                        defaulti so public registry is used.
+                      description: Specifies the internal registry to use.
                       type: string
                   type: object
                 additionalsCA:
